tests/error/misc_errors/result_tag_not_static.err
Error: Operator not defined (at $FILE:7:11)
  | 
5 | @compile_guppy
6 | def foo(y: bool) -> None:
7 |     result("foo" + "bar", y)
  |            ^^^^^^^^^^^^^ Binary operator `+` not defined for `str` and `str`

Guppy compilation failed due to 1 previous error
